# Deskmon

./: .gitignore  Activity_Monitor.qml  AddAplicatioRequest.qml  AddAppDialog.qml  AddApplicationDialog.qml  ApplicationsDialog.qml  CMakeLists.txt  ConfirmFinishDialog.qml  ConfirmSwitchDialog.qml  Current_Task.qml  DateRange.qml  DateRangeDialog.qml  Dialog.qml  EarlyLeaveDialog.qml  EarlyLogoutDialog.qml  Login_page.qml  Main.qml  MainDialog.qml  Monitored_Applications.qml  Pop_up_waktuhabis.qml  Productivty.qml  Profil_page.qml  README.md  RequestDialog.qml  RequstAppPending.qml  SaveTombolCropImage.qml  ShowAplication.qml  TaskDetailPopup.qml  app.rc  httpclient.cpp  httpclient.h  idlechecker.cpp  idlechecker.h  logger.cpp  logger.h  main.cpp  networkmanager.cpp  networkmanager.h  productivityappsdialog.qmodel  resource.h
